conf/k8s/base/backend-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api-deployment
  labels:
    app.kubernetes.io/component: backend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: backend-api
  template:
    metadata:
      labels:
        app.kubernetes.io/component: backend-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      serviceAccountName: default-service-account
      containers:
      - name: backend-api
        image: paritytech/substrate-playground-backend-api
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
