conf/k8s/base/backend-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-ui-service
spec:
  type: NodePort
  ports:
  - name: backend-ui-port
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/component: backend-ui
