conf/k8s/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, OPTIONS"
    #nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #  rewrite_log on;
    #  location ~ /front-end/.* {
    #    rewrite ^/front-end(/.*)?$ https://$host/$1 break;
    #  }
    # nginx.ingress.kubernetes.io/cors-allow-origin: "https://${PLAYGROUND_HOST}"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: backend-ui-service
          servicePort: backend-ui-port
      - path: /api
        backend:
          serviceName: backend-api-service
          servicePort: backend-api-port
      - path: /grafana
        backend:
          serviceName: grafana-service
          servicePort: grafana-port
      - path: /prometheus
        backend:
          serviceName: prometheus-service
          servicePort: prometheus-port
